--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Developer Portfolio</title>
    <link rel="stylesheet" href="styles/portfolio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a9a5ab507c.js" crossorigin="anonymous"></script>
 
     
 </head>
@@ -26,7 +27,7 @@
                 <h3 class="banner-sub-title">Hi, I am</h3>
                 <h1 class="banner-title">Anuwarul Islam Polash</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
                 <button class="btn-primary">Contact</button>
             </div>    
             <img src="images/polash-removebg-preview.png" alt="">
@@ -129,7 +130,7 @@
 
             </div>
                     <div class="resume-button">
-                     <button class="btn-primary">Download CV</button>
+                     <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
                      </div>
         </section>
         <!-- contract Section -->
